tests/nullable/nullable.exp
Error ------------------------------------------------------------- error.js:8:8

Cannot cast `any` to number because null or undefined is incompatible with
number.


Error ------------------------------------------------------------- error.js:9:3

Cannot cast `any` to null because:
 - null or undefined is incompatible with null.
 - number is incompatible with null.


Error ------------------------------------------------------------ error.js:10:3

Cannot cast `any` to undefined because:
 - null or undefined is incompatible with undefined.
 - number is incompatible with undefined.


Error: error.js:16
 16: ((any: ?number): number | null);
            ^^^^^^^ null or undefined. This type is incompatible with
 16: ((any: ?number): number | null);
                      ^^^^^^^^^^^^^ union: number | null
  Member 1:
   16: ((any: ?number): number | null);
                        ^^^^^^ number
  Error:
   16: ((any: ?number): number | null);
              ^^^^^^^ null or undefined. This type is incompatible with
   16: ((any: ?number): number | null);
                        ^^^^^^ number
  Member 2:
   16: ((any: ?number): number | null);
                                 ^^^^ null
  Error:
   16: ((any: ?number): number | null);
              ^^^^^^^ null or undefined. This type is incompatible with
   16: ((any: ?number): number | null);
                                 ^^^^ null

Error: error.js:17
 17: ((any: ?number): number | void);
            ^^^^^^^ null or undefined. This type is incompatible with
 17: ((any: ?number): number | void);
                      ^^^^^^^^^^^^^ union: number | undefined
  Member 1:
   17: ((any: ?number): number | void);
                        ^^^^^^ number
  Error:
   17: ((any: ?number): number | void);
              ^^^^^^^ null or undefined. This type is incompatible with
   17: ((any: ?number): number | void);
                        ^^^^^^ number
  Member 2:
   17: ((any: ?number): number | void);
                                 ^^^^ undefined
  Error:
   17: ((any: ?number): number | void);
              ^^^^^^^ null or undefined. This type is incompatible with
   17: ((any: ?number): number | void);
                                 ^^^^ undefined

Error ------------------------------------------------------------ maybe.js:5:11

Cannot cast `123` to nullable string because number is incompatible with string.


Error --------------------------------------------------------- nullable.js:1:32

Cannot return `null` because null is incompatible with string.


Error -------------------------------------------------------- nullable.js:11:22

Cannot call `corge` with `x` bound to `x` because string is incompatible with
number.


Error -------------------------------------------------------- nullable.js:15:17

Cannot call `qux` with `x` bound to `x` because:
 - null is incompatible with string.
 - null or undefined is incompatible with string.


Error --------------------------------------------------- simple_nullable.js:4:5

Cannot call `bar` with `'hmm'` bound to `x` because string is incompatible with
number.



Found 13 errors
